force-app/main/default/objects/Product_Registration__c/Product_Registration__c.object-meta.xml
<CustomObject>
    <description>To be used to capture details for different product registrations like Aquire and AMEX.</description>
    <label>Product Registration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>