force-app/main/default/objects/Product_Registration__c/fields/Account_Address_Line_1_Aquire__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Line_1_Aquire__c</fullName>
    <description>Incoming data from Aquire - Account Address Line 1
STME-5702 - Increased length from 50 to 200.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Address Line 1 QBR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>