force-app/main/default/objects/Product_Registration__c/fields/Account_Address_Type_Aquire__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Type_Aquire__c</fullName>
    <description>Incoming data from Aquire - Account Address Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Address Type QBR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>