force-app/main/default/objects/Product_Registration__c/fields/Account_Suburb_Town_City_Aquire__c.field-meta.xml
<CustomField>
    <fullName>Account_Suburb_Town_City_Aquire__c</fullName>
    <description>Incoming data from Aquire - Account Suburb, town city</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Suburb Town City QBR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>