force-app/main/default/objects/Product_Registration__c/fields/Acquire_Country__c.field-meta.xml
<CustomField>
    <fullName>Acquire_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>