force-app/main/default/objects/Product_Registration__c/fields/Acquire_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Acquire_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>