force-app/main/default/objects/Product_Registration__c/fields/Acquire_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Acquire_Zip_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>