force-app/main/default/objects/Product_Registration__c/fields/Active_QBD_With_Key_Contact_OfficeId__c.field-meta.xml
<CustomField>
    <fullName>Active_QBD_With_Key_Contact_OfficeId__c</fullName>
    <formula>((RecordType.DeveloperName ==&apos;QBD_Registration&apos;) &amp;&amp; 
((Account__r.Active_QBD_Products_rollup__c ==1 &amp;&amp; Active__c == true) || 
(Account__r.Active_QBD_Products_rollup__c &gt;=2 ) || 
(Account__r.Active_QBD_Products_rollup__c =0 )))</formula>
    <label>Active QBD With Key Contact OfficeId</label>
    <type>Checkbox</type>
</CustomField>