force-app/main/default/objects/Product_Registration__c/fields/AEQCC_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>AEQCC_Response_Code__c</fullName>
    <description>copy the Account&apos;s AEQCC Response Code to product.
Enabled with field history tracking.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Response Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>