force-app/main/default/objects/Product_Registration__c/fields/Airline_Level__c.field-meta.xml
<CustomField>
    <fullName>Airline_Level__c</fullName>
    <description>Holds the Airline Level of QBR Product Enrolled for AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airline Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>