force-app/main/default/objects/Product_Registration__c/fields/AMEX_Accept_or_Reject_Code__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Accept_or_Reject_Code__c</fullName>
    <description>Holds the AMEX Accept or Reject code during callback from IFLY</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Accept or Reject Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>