force-app/main/default/objects/Product_Registration__c/fields/AMEX_Accept_or_Reject_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Accept_or_Reject_Code_Description__c</fullName>
    <description>Holds the AMEX Accept or Reject Code Description during Ifly CallBack</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Accept or Reject Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>