force-app/main/default/objects/Product_Registration__c/fields/AMEX_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Address_Line_1__c</fullName>
    <description>Incoming data from AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>