force-app/main/default/objects/Product_Registration__c/fields/AMEX_Choice__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Choice__c</fullName>
    <description>AMEX_Choice</description>
    <label>AMEX Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I - Ineligible</fullName>
            </value>
            <value>
                <fullName>D - Double Points</fullName>
            </value>
            <value>
                <fullName>R - Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>