force-app/main/default/objects/Product_Registration__c/fields/AMEX_Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Industry__c</fullName>
    <description>Company Industry Value used for AMEX Product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Industry</label>
    <length>1</length>
    <type>Text</type>
</CustomField>