force-app/main/default/objects/Product_Registration__c/fields/AMEX_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Name__c</fullName>
    <description>Incoming data from AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>