force-app/main/default/objects/Product_Registration__c/fields/AMEX_Company_State__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_State__c</fullName>
    <description>Company State used in AMEX Product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>