force-app/main/default/objects/Product_Registration__c/fields/AMEX_Customer_Choice_Date__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Customer_Choice_Date__c</fullName>
    <description>Incoming data from AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Entitled with QBR Benefits if Enrollment Date is post June 28th 2017</inlineHelpText>
    <label>AMEX Enrollment Received Date</label>
    <type>Date</type>
</CustomField>