force-app/main/default/objects/Product_Registration__c/fields/AMEX_Indicator__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Indicator__c</fullName>
    <formula>Account__r.AMEX_response_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMEX Indicator</label>
    <type>Text</type>
</CustomField>