force-app/main/default/objects/Product_Registration__c/fields/AMEX_Job_Tilte__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Job_Tilte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>