force-app/main/default/objects/Product_Registration__c/fields/AMEX_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>