force-app/main/default/objects/Product_Registration__c/fields/AMEX_Salutation__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Salutation__c</fullName>
    <description>Salutation used in AMEX Product</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>