force-app/main/default/objects/Product_Registration__c/fields/Amex_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Amex_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>