force-app/main/default/objects/Product_Registration__c/fields/Amex_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Amex_Zip_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>