force-app/main/default/objects/Product_Registration__c/fields/Annual_International_Flights__c.field-meta.xml
<CustomField>
    <fullName>Annual_International_Flights__c</fullName>
    <label>Annual International Flights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-200</fullName>
            </value>
            <value>
                <fullName>201-300</fullName>
            </value>
            <value>
                <fullName>300+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>