force-app/main/default/objects/Product_Registration__c/fields/Aq_Business_international_annual_spend__c.field-meta.xml
<CustomField>
    <fullName>Aq_Business_international_annual_spend__c</fullName>
    <description>Incoming from Qantas Business Rewards</description>
    <label>QBR Business international annual spend</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>