force-app/main/default/objects/Product_Registration__c/fields/Aquire_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Entity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR-Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>