force-app/main/default/objects/Product_Registration__c/fields/Aquire_ID__c.field-meta.xml
<CustomField>
    <fullName>Aquire_ID__c</fullName>
    <description>QBR ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>