force-app/main/default/objects/Product_Registration__c/fields/Aquire_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Membership_End_Date__c</fullName>
    <description>End Date of QBR Membership being sent to AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Membership End Date</label>
    <type>Date</type>
</CustomField>