force-app/main/default/objects/Product_Registration__c/fields/Aquire_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Membership_Start_Date__c</fullName>
    <description>Start date of QBR membership being sent to AMEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Membership Start Date</label>
    <type>Date</type>
</CustomField>