force-app/main/default/objects/Product_Registration__c/fields/Aquire_Point_Balance__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Point_Balance__c</fullName>
    <description>Incoming data from Aquire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Point Balance</label>
    <length>12</length>
    <type>Text</type>
</CustomField>