force-app/main/default/objects/Product_Registration__c/fields/Aquire_Sub_industry__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Sub_industry__c</fullName>
    <description>Incoming data from Aquire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Sub-industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>