force-app/main/default/objects/Product_Registration__c/fields/Card_Description__c.field-meta.xml
<CustomField>
    <fullName>Card_Description__c</fullName>
    <description>Describes the CardType of the AMEX Product</description>
    <formula>IF( ISPICKVAL( Type__c , &apos;AEQCC&apos;) , &apos;AEQCC - American Express Qantas Corporate Card&apos;, 
IF( ISPICKVAL( Type__c , &apos;AQBRC&apos;) , &apos;AQBRC - American Express Qantas Business Rewards Card&apos;, 
&apos;&apos; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Description</label>
    <type>Text</type>
</CustomField>