force-app/main/default/objects/Product_Registration__c/fields/Corporate_Deal__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Deal__c</fullName>
    <formula>TEXT(Account__r.Dealing_Flag__c)</formula>
    <label>Corporate Deal</label>
    <type>Text</type>
</CustomField>