force-app/main/default/objects/Product_Registration__c/fields/Creation_Date_System__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_System__c</fullName>
    <formula>case(text(Account__r.ShippingCountryCode) 
,&quot;AU&quot;,null, 
&apos;&apos;,null, 
QBD_Enrollment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date [System]</label>
    <type>Date</type>
</CustomField>