force-app/main/default/objects/Product_Registration__c/fields/Customer_s_Requested_Choice__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Requested_Choice__c</fullName>
    <description>Customer’s Requested Choice from AMEX</description>
    <inlineHelpText>A - Aquire Points, R - Rebate</inlineHelpText>
    <label>Customer’s Requested Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>