force-app/main/default/objects/Product_Registration__c/fields/Employees_Travelling_Occassionally__c.field-meta.xml
<CustomField>
    <fullName>Employees_Travelling_Occassionally__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees Travelling Occassionally</label>
    <length>5</length>
    <type>Text</type>
</CustomField>