force-app/main/default/objects/Product_Registration__c/fields/Employees_Travelling_Rarely__c.field-meta.xml
<CustomField>
    <fullName>Employees_Travelling_Rarely__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees Travelling Rarely</label>
    <length>5</length>
    <type>Text</type>
</CustomField>