force-app/main/default/objects/Product_Registration__c/fields/Enrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Date__c</fullName>
    <description>Aquire Inbound</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolment Date</label>
    <type>Date</type>
</CustomField>