force-app/main/default/objects/Product_Registration__c/fields/Estimated_Hotel_Spend_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hotel_Spend_Per_Annum__c</fullName>
    <description>To estimate the hotel spend/annum</description>
    <label>Estimated Hotel Spend Per Annum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>