force-app/main/default/objects/Product_Registration__c/fields/Estimated_Total_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Annual_Revenue__c</fullName>
    <label>Estimated Total Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>