force-app/main/default/objects/Product_Registration__c/fields/Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_Reason__c</fullName>
    <description>Exit Reason as supplied by Amex.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Exit reason of customer exiting the product registration and as supplied by customer.</inlineHelpText>
    <label>Exit Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>