force-app/main/default/objects/Product_Registration__c/fields/Flights__c.field-meta.xml
<CustomField>
    <fullName>Flights__c</fullName>
    <description>This is count of  QBD Travel Flight Transaction for the month specified.</description>
    <label>Flights #</label>
    <summaryFilterItems>
        <field>Travel_Tracker__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Flights</value>
    </summaryFilterItems>
    <summaryForeignKey>Travel_Tracker__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>