force-app/main/default/objects/Product_Registration__c/fields/GDS_QBR_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>GDS_QBR_Discount_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS QBR Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>