force-app/main/default/objects/Product_Registration__c/fields/GDS_QBR_Message_Ref__c.field-meta.xml
<CustomField>
    <fullName>GDS_QBR_Message_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS QBR Message Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>