force-app/main/default/objects/Product_Registration__c/fields/Key_Contact_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Office_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Contact Office ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>