force-app/main/default/objects/Product_Registration__c/fields/Last_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Rebate_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>$AUD Jul14- Jun15</inlineHelpText>
    <label>Last Rebate Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>