force-app/main/default/objects/Product_Registration__c/fields/Max_Airline_Points_for_Membership_Year__c.field-meta.xml
<CustomField>
    <fullName>Max_Airline_Points_for_Membership_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Achieved Max QBR Pts fr Membership Yr</label>
    <type>Checkbox</type>
</CustomField>