force-app/main/default/objects/Product_Registration__c/fields/MCA_Number__c.field-meta.xml
<CustomField>
    <fullName>MCA_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>MCA/Gen ID #  Identifier for both AWQCC and AQBRC</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MCA/Gen ID #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>