force-app/main/default/objects/Product_Registration__c/fields/Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiry_Date__c</fullName>
    <description>Aquire Inbound</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>