force-app/main/default/objects/Product_Registration__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Membership #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>