force-app/main/default/objects/Product_Registration__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for Data Migration data from QUEST</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>