force-app/main/default/objects/Product_Registration__c/fields/Number_Of_Travellers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Travellers__c</fullName>
    <description>to update the travellers in PR Obj</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Travellers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>