force-app/main/default/objects/Product_Registration__c/fields/Other_Airline_Share_of_Air_spend__c.field-meta.xml
<CustomField>
    <fullName>Other_Airline_Share_of_Air_spend__c</fullName>
    <label>Other Airline Share of Air spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>