force-app/main/default/objects/Product_Registration__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>To capture the state code &amp; QBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>