force-app/main/default/objects/Product_Registration__c/fields/Program_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Business_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>