force-app/main/default/objects/Product_Registration__c/fields/Qantas_Club_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Discount_Code__c</fullName>
    <description>Indirect Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indirect Code</inlineHelpText>
    <label>Qantas Club Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>