force-app/main/default/objects/Product_Registration__c/fields/QBD__c.field-meta.xml
<CustomField>
    <fullName>QBD__c</fullName>
    <description>AMEX- Holds the QBD Flag from Account</description>
    <formula>IF( Account__r.QBD__c == TRUE,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QBD</label>
    <type>Text</type>
</CustomField>