force-app/main/default/objects/Product_Registration__c/fields/QBD_Business_Communication__c.field-meta.xml
<CustomField>
    <fullName>QBD_Business_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filed indicates whether the QBD key contact opted in for business comms.</description>
    <label>QBD Business Communication</label>
    <type>Checkbox</type>
</CustomField>