force-app/main/default/objects/Product_Registration__c/fields/QBD_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>QBD_Last_Modified_Date__c</fullName>
    <description>To store the last modified date of the QBD product registration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBD Last Modified Date</label>
    <type>Date</type>
</CustomField>