force-app/main/default/objects/Product_Registration__c/fields/QBD_to_QBR_Reporting_Transition__c.field-meta.xml
<CustomField>
    <fullName>QBD_to_QBR_Reporting_Transition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Flag indicates that the customer is keen to retain the reporting feature and wish to continue to receive such monthly reports until advised.</inlineHelpText>
    <label>QBD to QBR Reporting Transition</label>
    <type>Checkbox</type>
</CustomField>