force-app/main/default/objects/Product_Registration__c/fields/QBR_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>QBR_Entity_Type__c</fullName>
    <formula>Account__r.Aquire_Entity_Type__c</formula>
    <label>QBR Entity Type</label>
    <type>Text</type>
</CustomField>