force-app/main/default/objects/Product_Registration__c/fields/QCD_Message_Ref__c.field-meta.xml
<CustomField>
    <fullName>QCD_Message_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QCD Message Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>