force-app/main/default/objects/Product_Registration__c/fields/Rebate_Earned__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Earned__c</fullName>
    <description>To be used for AEQCC product registration</description>
    <inlineHelpText>Please enter the rebate % the customer earned (2-5%)</inlineHelpText>
    <label>Rebate % Earned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>