force-app/main/default/objects/Product_Registration__c/fields/SME_Deal__c.field-meta.xml
<CustomField>
    <fullName>SME_Deal__c</fullName>
    <description>AMEX Holds the SME Deals of the Account</description>
    <formula>IF( Account__r.SME_Deal__c == TRUE,&apos;Y&apos;,&apos;N&apos;)</formula>
    <label>SME Deal</label>
    <type>Text</type>
</CustomField>