force-app/main/default/objects/Product_Registration__c/fields/SME_override_Flag__c.field-meta.xml
<CustomField>
    <fullName>SME_override_Flag__c</fullName>
    <description>AMEX Holds the QBR Override from Account</description>
    <formula>TEXT(Account__r.Aquire_Override__c)</formula>
    <label>SME override Flag</label>
    <type>Text</type>
</CustomField>