force-app/main/default/objects/Product_Registration__c/fields/SME_Product_Usage_LY__c.field-meta.xml
<CustomField>
    <fullName>SME_Product_Usage_LY__c</fullName>
    <label>SME Product Usage (LY)</label>
    <summaryFilterItems>
        <field>Travel_Tracker__c.LY__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </summaryFilterItems>
    <summaryForeignKey>Travel_Tracker__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>