force-app/main/default/objects/Product_Registration__c/fields/Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_Status__c</fullName>
    <label>Stage/Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract Expired</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>Pending Contract</fullName>
            </value>
            <value>
                <fullName>New Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>