force-app/main/default/objects/Product_Registration__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>To capture the sub-city &amp; QBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Suburb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>