force-app/main/default/objects/Product_Registration__c/fields/Total_Active_Cards__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Cards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Active Cards</label>
    <length>5</length>
    <type>Text</type>
</CustomField>